--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@nuxtjs/fontawesome": "^1.1.2",
-    "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "@nuxtjs/google-fonts": "^1.3.0",
+    "@splidejs/vue-splide": "^0.3.5",
+    "core-js": "^3.13.0",
+    "nuxt": "^2.15.6"
   },
   "devDependencies": {}
 }
