--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@nuxt/content": "^1.14.0",
+    "@nuxt/http": "^0.6.4",
     "@nuxtjs/fontawesome": "^1.1.2",
     "@nuxtjs/google-fonts": "^1.3.0",
     "@splidejs/vue-splide": "^0.3.5",
-    "core-js": "^3.13.0",
-    "nuxt": "^2.15.6"
+    "core-js": "^3.15.2",
+    "nuxt": "^2.15.7"
   },
   "devDependencies": {}
 }
