--- a/package.json
+++ b/package.json
@@ -9,14 +9,12 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@fortawesome/free-brands-svg-icons": "^5.15.3",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@nuxt/content": "^1.14.0",
     "@nuxt/http": "^0.6.4",
-    "@nuxtjs/fontawesome": "^1.1.2",
     "@nuxtjs/google-fonts": "^1.3.0",
     "@splidejs/vue-splide": "^0.3.5",
-    "core-js": "^3.15.2",
+    "bootstrap-vue": "^2.21.2",
+    "core-js": "^3.16.1",
     "nuxt": "^2.15.7"
   },
   "devDependencies": {}
