--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "core-js": "^3.16.1",
     "nuxt": "^2.15.7"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "node-sass": "^6.0.1",
+    "sass-loader": "^10.2.0"
+  }
 }
