--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,5 +17,17 @@ collections:
     fields:
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Date', name: 'date', widget: 'datetime' }
-      - { label: 'Alt', name: 'alt', widget: 'string' }
+      - { label: 'Photograph', name: 'photograph', widget: 'image'}
+
+  - name: 'color'
+    label: 'Color'
+    folder: 'content/color'
+    format: 'frontmatter'
+    create: true
+    slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
+    editor:
+      preview: false
+    fields:
+      - { label: 'Title', name: 'title', widget: 'string' }
+      - { label: 'Date', name: 'date', widget: 'datetime' }
       - { label: 'Photograph', name: 'photograph', widget: 'image'}
