--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nuxt": "^2.15.7"
   },
   "devDependencies": {
+    "@nuxtjs/google-analytics": "^2.4.0",
     "node-sass": "^6.0.1",
     "sass-loader": "^10.2.0"
   }
