--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -6,28 +6,13 @@ media_folder: static/img
 public_folder: /img
 
 collections:
-  - name: 'b&w'
-    label: 'Black and White'
-    folder: 'content/b&w'
+  - name: 'street photography'
+    label: 'Street Photography'
+    folder: 'content/street-photography'
     format: 'frontmatter'
     create: true
     slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
     editor:
       preview: false
     fields:
-      - { label: 'Title', name: 'title', widget: 'string' }
-      - { label: 'Date', name: 'date', widget: 'datetime' }
-      - { label: 'Photograph', name: 'photograph', widget: 'image'}
-
-  - name: 'color'
-    label: 'Color'
-    folder: 'content/color'
-    format: 'frontmatter'
-    create: true
-    slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
-    editor:
-      preview: false
-    fields:
-      - { label: 'Title', name: 'title', widget: 'string' }
-      - { label: 'Date', name: 'date', widget: 'datetime' }
       - { label: 'Photograph', name: 'photograph', widget: 'image'}
