--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -15,4 +15,5 @@ collections:
     editor:
       preview: false
     fields:
+      - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Photograph', name: 'photograph', widget: 'image'}
