--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
     "@nuxt/http": "^0.6.4",
     "@nuxtjs/google-fonts": "^1.3.0",
     "@splidejs/vue-splide": "^0.3.5",
-    "bootstrap-vue": "^2.21.2",
-    "core-js": "^3.16.1",
-    "nuxt": "^2.15.7"
+    "bootstrap": "^4.6.2",
+    "bootstrap-vue": "^2.22.0",
+    "core-js": "^3.25.3",
+    "nuxt": "^2.15.8",
+    "postcss": "^8.4.21",
+    "vue": "^2.7.10",
+    "vue-server-renderer": "^2.7.10",
+    "vue-template-compiler": "^2.7.10"
   },
   "devDependencies": {
     "@nuxtjs/google-analytics": "^2.4.0",
     "node-sass": "^6.0.1",
-    "sass-loader": "^10.2.0"
+    "sass-loader": "^10.2.0",
+    "webpack": "^4.46.0"
   }
 }
