--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/http": "^0.6.4",
     "@nuxtjs/google-fonts": "^1.3.0",
     "@nuxtjs/google-gtag": "^1.0.4",
+    "@nuxtjs/sitemap": "^2.4.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.16.1",
     "nuxt": "^2.17.1",
