--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.16.1",
     "nuxt": "^2.17.1",
-    "vue-stack-grid": "^1.2.2"
+    "vue-grid-responsive": "^0.5.0"
   },
   "devDependencies": {
     "node-sass": "^8.0.0",
