--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
-    "build": "nuxt build || exit 0",
+    "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate"
   },
@@ -17,7 +17,8 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.16.1",
     "nuxt": "^2.17.1",
-    "vue-grid-responsive": "^0.5.0"
+    "vue-grid-responsive": "^0.5.0",
+    "vue-stack-grid": "^1.2.2"
   },
   "devDependencies": {
     "node-sass": "^8.0.0",
