--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-stack-grid": "^1.2.2"
   },
   "devDependencies": {
+    "@nuxt/image": "^0.7.1",
     "node-sass": "^8.0.0",
     "sass-loader": "^10.2.0",
     "webpack": "^4.46.0"
