Add black and white content

--- a/.lfsconfig
+++ b/.lfsconfig
@@ -1,2 +1,2 @@
 [lfs]
-	url = https://75d505d0-e708-4bfb-a2e3-984484ad7b89.netlify.app/.netlify/large-media
+	url = https://thekevshot.netlify.app/.netlify/large-media
