--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -28,6 +28,17 @@ collections:
     fields:
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Photograph', name: 'photograph', widget: 'image'}
+  - name: 'low-light'
+    label: 'Low Light'
+    folder: 'content/low_light'
+    format: 'frontmatter'
+    create: true
+    slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
+    editor:
+      preview: false
+    fields:
+      - { label: 'Title', name: 'title', widget: 'string' }
+      - { label: 'Photograph', name: 'photograph', widget: 'image'}
   - name: 'new-topographics'
     label: 'New Topographics'
     folder: 'content/new_topographics'
