--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "nuxt": "^2.17.1",
+    "bootstrap-vue": "^2.21.2",
+    "vue-stack-grid": "^1.2.2",
     "@nuxt/content": "^1.14.0",
     "@nuxt/http": "^0.6.4",
     "@nuxtjs/google-fonts": "^1.3.0",
     "@nuxtjs/google-gtag": "^1.0.4",
-    "@nuxtjs/sitemap": "^2.4.0",
-    "bootstrap-vue": "^2.21.2",
-    "nuxt": "^2.17.1",
-    "vue-stack-grid": "^1.2.2"
+    "@nuxtjs/sitemap": "^2.4.0"
   },
   "devDependencies": {
     "@nuxt/image": "^0.7.1",
